--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,4 +1,4 @@
-.Overlay {
+.modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -8,10 +8,10 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1200;
+  z-index: 2;
 }
 
-.Modal {
+.modal__block {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
 }
