--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,8 +1,8 @@
-.Searchbar {
+.searchBar {
   top: 0;
   left: 0;
   position: sticky;
-  z-index: 1100;
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,25 +12,23 @@
   padding-top: 12px;
   padding-bottom: 12px;
   color: #fff;
-  background-color: #3f51b5;
+  background-color: #6e83fb;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/*
-   * Стили компонента SearchForm
-   */
-.form {
+.searchBar__form {
   display: flex;
   align-items: center;
   width: 100%;
-  max-width: 600px;
+  max-width: 450px;
   background-color: #fff;
-  border-radius: 3px;
+  border-radius: 10px;
   overflow: hidden;
 }
 
-.button {
+.searchBar__button {
   display: inline-block;
   width: 48px;
   height: 48px;
@@ -39,16 +37,19 @@
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.6;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity, fill, scale  250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   outline: none;
+  fill: currentColor
 }
 
-.button:hover {
+.searchBar__button:hover {
   opacity: 1;
+  fill: #6e83fb;
+  scale: 1.1;
 }
 
-.label {
+.searchBar__label {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -60,18 +61,19 @@
   border: 0;
 }
 
-.input {
+.searchBar__input {
   display: inline-block;
   width: 100%;
+  height: 100%;
   font: inherit;
-  font-size: 20px;
+  font-size: 22px;
   border: none;
   outline: none;
   padding-left: 4px;
   padding-right: 4px;
 }
 
-.input::placeholder {
+.searchBar__input::placeholder {
   font: inherit;
   font-size: 18px;
 }
