--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,8 +1,8 @@
-.Button {
+.button {
   padding: 8px 16px;
   margin: 0 auto;
-  border-radius: 2px;
-  background-color: #3f51b5;
+  border-radius: 20px;
+  background-color: #6e83fb;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
@@ -21,7 +21,8 @@
   width: 60px;
 }
 
-.Button:hover,
-.Button:focus {
-  background-color: #303f9f;
+.button:hover,
+.button:focus {
+  background-color: #5271fc;
+  scale: 1.03;
 }
